# merbots

./: README.md
joint_offset/: CMakeLists.txt  package.xml
joint_offset/include/grasper/: joint_offset.h
joint_offset/launch/: joint_offset_launcher.launch
joint_offset/src/: joint_offset.cpp  joint_offset_launcher.cpp
launch/: arm5.launch  arm5e.urdf  arm5e.urdf_bak
markerToGrasp/src/: marker_to_grasp.cpp
merbots_grasp_srv/: CMakeLists.txt  package.xml
merbots_grasp_srv/include/merbots_grasp_srv/: grasp.hpp
merbots_grasp_srv/src/: grasp.cpp  grasp_server.cpp  move_arm.cpp
merbots_grasp_srv/srv/: grasp_srv.srv  grasp_station_srv.srv  open_gripper_srv.srv
optoforce/config/: single_channel_6_axis_generic_scale.yaml
optoforce/launch/: 6d.launch  optoforce.launch
task_priority/: CMakeLists.txt  package.xml
task_priority/launch/: dina.launch  dina.yaml  grasp_planning.launch  grasp_planning2.yaml  grasp_planning3.launch  grasp_planning3.yaml  grasp_planning4.launch  grasp_planning4.yaml  grasp_planning5.launch  grasp_planning5.yaml  grasp_planning_first_stage.yaml  grasp_planning_normal.launch  grasp_planning_normal.yaml  grasp_planning_normal.yaml_bak  grasp_planning_normal2.launch  grasp_planning_normal2.yaml  grasp_planning_prueba.yaml  grasp_planning_second_stage.yaml  grasp_planning_stages.launch  grasp_planning_third_stage.yaml  icra.launch  icra2.launch  icra_01.yaml  icra_02.yaml  merbots.launch  merbots.yaml  merbots_sensors.launch  merbots_sensors.yaml  multi_task_priority.launch  multi_task_priority.yaml  uwsim.launch  uwsim.yaml
(+20 files in other folders)
